--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#f5f5f5</color>
+    <color name="colorPrimary">#F1F1F1</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
-    <color name="colorCanFeast">#008000</color>
+    <color name="colorWindowBackground">#FFFFFF</color>
+        <color name="colorTextColorPrimary">#008000</color>
 
+    <color name="colorCanFeast">#008000</color>
+    <color name="colorBorder">#f6f6f6</color>
 </resources>
