--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,5 +7,5 @@
     <color name="colorTextColorPrimary">#008000</color>
 
     <color name="colorCanFeast">#008000</color>
-    <color name="colorBorder">#f6f6f6</color>
+    <color name="colorBorder">#515151</color>
 </resources>
