--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,8 +4,12 @@
     <color name="colorPrimaryDark">#f57f17</color>
     <color name="colorAccent">#FF4081</color>
     <color name="colorWindowBackground">#FFFFFF</color>
-    <color name="colorTextColorPrimary">#008000</color>
+    <color name="colorTextColorPrimary">#797979</color>
 
     <color name="colorCanFeast">#008000</color>
-    <color name="colorBorder">#515151</color>
+    <color name="colorBorder">#F5F5F5</color>
+    <color name="colorHeading1">#ff5252</color>
+
+
+
 </resources>
