--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#a1a1a1</color>
-    <color name="colorPrimaryDark">#f57f17</color>
+    <color name="colorPrimary">#ff9800</color>
+    <color name="colorPrimaryDark">#f57c00</color>
     <color name="colorAccent">#FF4081</color>
+
     <color name="colorWindowBackground">#FFFFFF</color>
     <color name="colorTextColorPrimary">#797979</color>
 
